# phoebe.client

./: .gitignore  LICENSE  MANIFEST.in  README.md  config.toml  pyproject.toml
.github/: copilot-instructions.md
examples/: basic_usage.py  explicit_session.py  live_server_smoke.py  with_jwt_auth.py
phoebe_client/: __init__.py  client.py  config.py  exceptions.py  server_api.py
phoebe_client/auth/: __init__.py  base.py  internal.py  jwt.py
phoebe_client/utils/: __init__.py  serialization.py
tests/: test_client.py  test_phoebe.py
tests/integration/: test_live_server.py
